# amsynth

./: .gitignore  .gitmodules  .mailmap  CHANGELOG.md  Makefile.am  README.md  configure.ac
.github/workflows/: codeql-analysis.yml  linux.yml  mac.yml  windows.yml
android/: .gitignore  README.md  local.properties.sample  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  amsynth_jni.cpp
data/: amsynth.appdata.xml.in  amsynth.desktop.in
data/amsynth.lv2/: amsynth.ttl
debian/: changelog
mac/: build_release.sh  install_data.sh
mac/amsynth.xcodeproj/: project.pbxproj
mac/pkg/resources/: Welcome.rtf
man/: amsynth.1.md
man/de/: amsynth.1.md
man/fr/: amsynth.1.md
packaging/android/: build-on-moviecomp.sh
packaging/android/fdroid/: com.amsynth.enhanced.yml
packaging/raspberry-pi/: README.md  build-deb.sh
src/core/: Configuration.cpp  Configuration.h  filesystem.cpp
src/core/gui/: ControlPanel.cpp  Controls.h  JuceIntegration.cpp  JuceIntegration.h  MainComponent.cpp  MainComponent.h
src/core/synth/: MidiController.cpp  MidiController.h  Parameter.cpp  Parameter.h  Preset.cpp  Preset.h  PresetController.cpp  PresetController.h  Synthesizer.cpp  Synthesizer.h  TuningMap.cpp  TuningMap.h  VoiceAllocationUnit.cpp  VoiceAllocationUnit.h
src/plugins/au/: auplugin.cpp  auplugin.h  auui.mm
src/plugins/dssi/: dssiplugin.cpp  dssiui.cpp
src/plugins/lv2/: lv2plugin.cpp  lv2plugin.h  lv2ui.cpp
src/plugins/vst2/: vstplugin.cpp
src/standalone/: AudioOutput.cpp  ParameterQueue.h  main.cpp
src/standalone/drivers/: ALSAAudioDriver.cpp  ALSAmmapAudioDriver.cpp  AudioDriver.h
tests/: tests.cpp
tools/: amsynth-hzctl.c
web/: README.md  amsynth-processor.js  build.sh  exports.txt  index.html  package.json  synth_bridge.cpp  test-bank.mjs  test-browser.mjs  test-controllers.mjs  test-midi.mjs  test-node.mjs  test-scale.mjs  test-state.mjs  test-worklet.mjs
(+49 files in other folders)
